--- a/src/App.scss
+++ b/src/App.scss
@@ -74,6 +74,75 @@ header {
   }
 }
 
+.plan-label {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  border: solid 1pt var(--color-grey-500);
+  border-radius: 8px;
+  margin-block: 1rem;
+  padding: 0.5rem;
+  .plan-caption {
+    display: flex;
+    flex-direction: column;
+  }
+  input {
+    display: none;
+  }
+  &.checked {
+    background-color: var(--color-blue-300);
+    border-color: var(--color-purple-600);
+  }
+}
+.period-selector {
+  display: flex;
+  width: 100%;
+  border-radius: 8px;
+  background-color: var(--color-blue-100);
+  margin-block: 1rem;
+  padding: 1rem;
+
+  input {
+    display: none;
+  }
+  label.checked {
+    font-weight: bold;
+  }
+}
+
+.addon-label {
+  display: grid;
+  grid-template-columns: 1rem auto 5rem;
+  grid-template-rows: 1fr 1fr;
+  gap: 1rem;
+  border: solid 1pt var(--color-gray-500);
+  border-radius: 8px;
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+  .addon-name {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+  .addon-caption {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .addon-price {
+    grid-column: 3/4;
+    grid-row: 1/3;
+    justify-self: end;
+    align-self: center;
+  }
+  input {
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+  &.checked {
+    background-color: var(--color-blue-300);
+    border-color: var(--color-purple-600);
+  }
+}
+
 footer {
   width: 100%;
   padding: 1rem 1.5rem;
