--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: flex-start;
+  width: 100%;
   min-width: 320px;
   min-height: 100vh;
   background-color: var(--color-blue-100);
@@ -11,31 +12,55 @@ body {
 
 #root {
   width: 100%;
-  max-width: 1280px;
+  max-width: 1024x;
+  max-height: 640px;
   margin: 0 auto;
   padding: 0;
+  background-color: inherit;
   //text-align: center;
 }
 
 header {
   background-image: url(/assets/images/bg-sidebar-mobile.svg);
+  background-size: cover;
+  background-position: center;
   width: 100%;
   height: 170px;
+  display: grid;
+  justify-content: center;
+  padding-top: 2rem;
+
+  nav {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+  }
 }
 
-.circular-button {
+button:hover, button:focus {
   cursor: pointer;
+  opacity: 0.5;
+}
+
+.circular-indicator {
+  display: grid;
+  place-content: center;
+  //cursor: pointer;
   border: solid 1pt var(--color-white);
   color: var(--color-white);
   background-color: var(--color-purple-600);
   width: 32px;
+  height: 32px;
   aspect-ratio: 1;
   border-radius: 50%;
 }
-.circular-button.current {
+.circular-indicator.current {
   background-color: var(--color-blue-200);
   color: var(--color-blue-950);
   border: none;
+}
+.step-caption {
+  display: none;
 }
 
 .error-message {
@@ -45,14 +70,21 @@ header {
   text-align: left;
 }
 
-.form-card {
+.form-footer {
   position: relative;
   top: -5.5rem;
-  width: calc(100% - 2rem);
-  margin: 1rem;
-  padding: 1rem;
-  background-color: var(--color-white);
+  width: calc(100% - clamp(2rem, 20vw - 30px, 8rem));
+  margin-block: 1rem;
+  margin-inline: auto;
+  //padding: 1rem;
+  background-color: inherit;
   border-radius: 8px;
+}
+.form-card {
+  background-color: var(--color-white);
+  padding: 1rem;
+  border-radius: 8px;
+
   h1 {
     color: var(--color-blue-950);
     font-size: 1.5rem;
@@ -65,12 +97,16 @@ header {
     color: var(--color-blue-950);
     font-size: 0.75rem;
   }
+}
+
+.personal-info {
   input {
     width: 100%;
     border: solid 1pt var(--color-grey-500);
     border-radius: 4px;
     margin-bottom: 1rem;
     padding: 0.5rem;
+    border-radius: 8px;
   }
 }
 
@@ -87,28 +123,75 @@ header {
     flex-direction: column;
   }
   input {
-    display: none;
+    opacity: 0;
+    position: absolute;
+  }
+  &:hover, &:focus {
+    //background-color: var(--color-blue-100);
+    border-color: var(--color-purple-600);
+    cursor: pointer;
   }
   &.checked {
-    background-color: var(--color-blue-300);
+    background-color: var(--color-blue-100);
     border-color: var(--color-purple-600);
   }
 }
 .period-selector {
+  position: relative;
   display: flex;
   width: 100%;
+  justify-content: center;
   border-radius: 8px;
   background-color: var(--color-blue-100);
   margin-block: 1rem;
   padding: 1rem;
+  label {
+    flex-grow: 1;
+    text-align: center;
+    z-index: 2;
+  }
 
   input {
-    display: none;
+    opacity: 0;
+    position: absolute;
   }
   label.checked {
     font-weight: bold;
   }
+
+  .switch {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    align-items: center;
+    //position: relative;
+    padding-inline: 3px;
+    width: 2.5rem;
+    height: 1.5rem;
+    background: var(--color-blue-950);
+    border-radius: 0.75rem;
+  }
+
+  .slider {
+    position: absolute;
+    width: 1.0rem;
+    height: 1.0rem;
+    background-color: white;
+    border-radius: 50%;
+    transition: 0.3s ease;
+    left: 3px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  // .slider.left {
+  // }
+  .slider.right {
+    left: 1.5rem;
+  }
 }
+
 
 .addon-label {
   display: grid;
@@ -138,9 +221,36 @@ header {
     grid-row: 1/3;
   }
   &.checked {
-    background-color: var(--color-blue-300);
+    background-color: var(--color-blue-100);
     border-color: var(--color-purple-600);
   }
+  &:hover, &:focus {
+    //background-color: var(--color-blue-100);
+    border-color: var(--color-purple-600);
+    cursor: pointer;
+
+  }
+
+}
+
+.itemized-summary {
+  background-color: var(--color-blue-100);
+  padding: 1rem;
+  border-radius: 8px;
+  color: var(--color-gray-500);
+
+  .item-card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-block: 1rem;
+  }
+}
+.total-card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-block: 1rem;
 }
 
 footer {
@@ -149,4 +259,87 @@ footer {
   display: flex;
   justify-content: space-between;
   background-color: var(--color-white);
+  margin-top: 5rem;
+}
+
+.thank-you {
+  display: grid;
+  place-content: center;
+  height: 100%;
+  text-align: center;
+  * {
+    margin-block: 1rem;
+  }
+  img {
+    margin-inline: auto;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  #root {
+    display: flex;
+    flex-direction: row;
+    column-gap: 2rem;
+    // width: 100%;
+    max-width: 940px;
+    height: 600px;
+    background-color: var(--color-white);
+    border-radius: 1rem;
+    padding: 0rem;
+    align-self: center;
+    justify-self: center;
+  }
+  header {
+    background-image: url(/assets/images/bg-sidebar-desktop.svg);
+    background-repeat: no-repeat;
+    height: auto;
+    width: 40%;
+    margin: 1rem 0 1rem 1rem;
+    border-radius: 1rem;
+    nav {
+      flex-direction: column;
+      justify-content: start;
+      align-items: start;
+    }
+    .nav-step {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+    .step-caption {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+  }
+  .form-footer {
+    display: flex;
+    top: 0;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 1rem 1rem 1rem 0;
+    padding-inline: 3rem;
+  }
+  .form-card {
+    width: 100%;
+    margin: 0;
+    padding-top: 1rem;
+  }
+  .personal-info > input {
+    margin-bottom: 2rem;
+  }
+  .plan-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 1rem;
+
+    label {
+      flex-direction: column;
+      padding: 1rem;
+    }
+  }
+  footer {
+    margin-top: auto;
+  }
 }
